--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "leaflet-routing-machine": "^3.2.12",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.0",
     "vuex": "^3.4.0"
